<?xml version="1.0"?>
<package format="2">
  <name>%ROBOT_NAME%</name>
  <version>0.0.0</version>
  <description>The %ROBOT_NAME% package</description>
  <maintainer email="user@domain.com">user</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>